@@ -5153,8 +5153,11 @@ width0pt\relax} \fi
   work.  It is also included in the Texinfo distribution, or you can get
   it from ftp://ftp.tug.org/tex/epsf.tex.}
 %
+% If in PDF mode, define image as pdfimage
+%
 % Only complain once about lack of epsf.tex.
 \def\image#1{%
+\ifx\pdfoutput\undefined
   \ifx\epsfbox\undefined
     \ifwarnednoepsf \else
       \errhelp = \noepsfhelp
@@ -5164,6 +5167,7 @@ width0pt\relax} \fi
   \else
     \imagexxx #1,,,\finish
   \fi
+\else\centerline{\pdfimage #1.pdf}\fi
 }
 %
 % Arguments to @image:
